--- a/sfsite/index.html
+++ b/sfsite/index.html
@@ -27,13 +27,13 @@
 <hr>
 <table border=0>
 <tr>
-<td> <img src="images/bochs2_6.png" alt="Bochs 2.6"></td>
+<td> <img src="images/bochs2_6.png" alt="Bochs 2.6.1"></td>
 <td>
-<font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs 2.6 released on September 2, 2012 !</b></font><BR>
-New Bochs 2.6 release is now available. You can download it from the
-<a href="https://sourceforge.net/projects/bochs/files/bochs/2.6/">SourceForge project page</a>.<BR>
-See the <a href="http://svn.code.sf.net/p/bochs/code/tags/REL_2_6_FINAL/bochs/CHANGES">
-CHANGES</a> file for details on what has changed since release 2.5.1<BR>
+<font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs 2.6.1 released on April 7, 2013 !</b></font><BR>
+New Bochs 2.6.1 release is now available. You can download it from the
+<a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.1/">SourceForge project page</a>.<BR>
+See the <a href="http://svn.code.sf.net/p/bochs/code/tags/REL_2_6_1_FINAL/bochs/CHANGES">
+CHANGES</a> file for details on what has changed since release 2.6<BR>
 </td></tr></table><hr>
 
 <BR><BR>
@@ -78,6 +78,7 @@ or <a href="http://sourceforge.net/sendmessage.php?touser=487634">Stanislav Shwa
 <BR><BR>
 <font face="arial, helvetica" color="#1e029a" size="4"><b>Older News</b></font><BR>
 <ul>
+  <li><b>April 7, 2013:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.1/">Bochs 2.6.1</a> is now available.
   <li><b>September 2, 2012:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6/">Bochs 2.6</a> is now available.
   <li><b>January 6, 2012:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.5.1/">Bochs 2.5.1</a> is now available.
   <li><b>November 27, 2011:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.5/">Bochs 2.5</a> is now available.
