--- a/sfsite/getcurrent.html
+++ b/sfsite/getcurrent.html
@@ -7,7 +7,94 @@
  <!--content starts here-->
  <img src="images/logo.gif" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
 
- <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Latest release:</b> Bochs 2.6</font><BR><BR>
+ <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Latest release:</b> Bochs 2.6.1</font><BR><BR>
+
+About seven months after release 2.6 we have a new intermediate (bugfix+) release.
+Here is the summary of changes :
+
+<ul>
+<li>CPU / CPUDB
+  <ul>
+  <li>Bochs is fully aligned with rev45 of the of Intel(R) Architecture Manual.
+    <ul>
+    <li>Implemented Supervisor Mode Access Protection (SMAP) support
+    <li>Implemented VMX APIC Registers Virtualization and VMX Virtual Interrupt Delivery
+    <li>Implemented VMCS Shadowing and #VE exception secondary VMEXIT controls emulation
+    <li>Implemented RDRAND and RDSEED instructions
+    </ul>
+  <li>CPUDB: Added AMD FX-4100 (Zambezi) configuration to CPUDB
+  <li>Bugfixes for CPU emulation correctness (critical fixes for SVM and AVX2 emulation)
+  </ul>
+
+<li>Bochs Debugger and Instrumentation
+  <ul>
+  <li>Use Enhanced GUI Debugger instead of old-style wx debugger with wx gui.
+    The old-style wx debugger support was deprecated and removed from the source code.
+  </ul>
+
+<li>I/O Devices
+  <ul>
+  <li>Implemented 3dfx Voodoo Graphics card emulation based on DOSBox patch, to enable
+    configure with --enable-voodoo option.
+  <li>Hard drive / HD image
+    <ul>
+    <li>Added full save restore support for most of the disk image formats
+    <li>undoable / volatile mode: added support of other types of r/o base images
+    <li>DLL HD support rewritten and enabled for WIN32 host
+    </ul>
+  <li>PCI chipset
+    <ul>
+    <li>Implemented i430FX chipset emulation
+    <li>USB UHCI always enabled in the i440FX case
+    </ul>
+  </ul>
+
+<li>Config interface
+  <ul>
+  <li>Configure option --enable-misaligned-sse moved to runtime option in .bochsrc. The old
+    option is deprecated and should not be used anymore.
+  <li>moved 'user_shortcut' bochsrc option to the 'keyboard' option
+  <li>save log options per device to bochsrc
+  <li>win32: implemented scrollable dialog items for large parameter lists
+  </ul>
+
+<li>GUI and display libraries
+  <ul>
+  <li>Graphics snapshot feature rewritten to support all kinds of graphics modes
+  <li>wx: starting a second simulation without closing Bochs now almost possible
+  </ul>
+
+<li>Tools
+  <ul>
+  <li>bxcommit: added support for converting flat to growing mode images
+  </ul>
+</ul>
+
+The binary packages for Linux and Windows are built with these featues :
+<ul>
+<li> x86-64 emulation with all optimizations enabled
+<li> devices:
+ <ul>
+ <li> chipset: PCI (i430FX / i440FX), ACPI
+ <li> video: Bochs VBE, Cirrus SVGA and Voodoo1
+ <li> sound: SB16 (ISA) and ES1370 (PCI)
+ <li> network: NE2000 (ISA/PCI) and E1000 (PCI)
+ <li> USB: OHCI, UHCI, xHCI and 7 pluggable device types
+ </ul>
+<li> Display libraries:
+ <ul>
+ <li> Linux: nogui, rfb, sdl, term, wx, x
+ <li> Windows: nogui, rfb, win32
+ </ul>
+</ul>
+
+<a href="http://svn.code.sf.net/p/bochs/code/tags/REL_2_6_1_FINAL/bochs/CHANGES">
+Details on what has changed since version 2.6
+</a>
+
+<BR/><BR/>
+
+ <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Previous release:</b> Bochs 2.6</font><BR><BR>
 
 About eight months after the bugfix release 2.5.1 we have a new stable release.
 Here is the summary of changes :
@@ -37,84 +124,10 @@ Here is the summary of changes :
   in the iodev folder.
 </ul>
 
-The binary packages for Linux and Windows are built with these featues :
-<ul>
-<li> x86-64 emulation with all optimizations enabled
-<li> devices:
- <ul>
- <li> chipset: PCI, ACPI
- <li> video: Bochs VBE and Cirrus SVGA
- <li> sound: SB16 (ISA) and ES1370 (PCI)
- <li> network: NE2000 (ISA/PCI) and E1000 (PCI)
- <li> USB: OHCI, UHCI and 7 pluggable device types
- </ul>
-<li> Display libraries:
- <ul>
- <li> Linux: nogui, rfb, sdl, term, wx, x
- <li> Windows: nogui, rfb, win32
- </ul>
-</ul>
+<BR>
 
 <a href="http://svn.code.sf.net/p/bochs/code/tags/REL_2_6_FINAL/bochs/CHANGES">
 Details on what has changed since version 2.5.1
-</a>
-
-<BR/><BR/>
-
- <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Previous release:</b> Bochs 2.5.1</font><BR><BR>
-
-Bochs 2.5.1 is a bugfix release. Here is the summary of changes :
-
-<ul>
-<li> CPU / CPUDB
-<ul>
-<li> ! Added Athlon64 (Venice) configuration to the CPUDB
-<li> BMI: fixed EFLAGS after BMI instructions
-<li> MSR: access to AMD extended MSR space was impossible due to a bug in RDMSR/WRMSR
-<li> VMX: fixed VMFUNC instruction behavior to align with Intel SDM revision 041
-<li> VMX: fixed Bochs PANIC when doing I/O access crossing VMX I/O permission bitmaps
-<li> VMX: fixed VirtualBox VMX guest Guru Meditation - FS.BASE got corrupted after
-     saving/restoring unusable FS selector
-<li> VMX: fixed VirtualBox failures with VMX+EPT enabled
-<li> Better report of supported CPUID features when not using pre-defined CPUID profile
-</ul>
-<li> Debugger / Instrumentation
-<ul>
-<li> fixed typo - closing SF bug [3461405] step all command fails in SMP mode
-<li> instrumentation: added special indication for indirect call/jump
-</ul>
-
-<li> Configure and compile
-<ul>
-<li> fixed compilation err in instrumentation call (tasking.cc)
-<li> fixed compilation err with x86 hw breakpoint enabled and CPU_LEVEL &lt; 6
-<li> fixed compilation issue under win32 --with-nogui
-<li> added missing dependencies for cdrom_osx.o
-<li> removed very old deprecated configure options from configure script
-</ul>
-
-<li> I/O Devices
-<ul>
-<li> fixed possible failures of PCI DMA transfers
-<li> VVFAT: several fixes in the optional write support (passes test with XP)
-<li> USB UHCI: some fixes to make it work in XP guest
-<li> removed devices 'acpi', 'ioapic' and 'pci_ide' from optional plugin control
-     to avoid trouble
-</ul>
-
-<li> Config interface / GUI and display libraries
-<ul>
-<li> added VMX .bochsrc option to control VMX support on runtime
-<li> fix for x86-64 .bochsrc option parsing (patch from @SF)
-<li> fix for @SF bug: Crash on WIN2K - ID: 3454214
-<li> added 'nokeyrepeat' option for the SDL and win32 gui
-</ul>
-</ul>
-
-<BR>
-
-<a href="http://svn.code.sf.net/p/bochs/code/tags/REL_2_5_1_FINAL/bochs/CHANGES">
-Details on what has changed since version 2.5
 </a>
 
  <BR><BR>
